RESOLVED FIXED47095
Fix a compiler bug from the patch of bug 45221
https://bugs.webkit.org/show_bug.cgi?id=47095
Summary Fix a compiler bug from the patch of bug 45221
Harry Wu
Reported 2010-10-04 10:26:41 PDT
https://bugs.webkit.org/show_bug.cgi?id=45221 has a simple compiler error for ANDROID. This bug is tracking and fixing that problem.
Attachments
Fix a compiler error for ANDROID (1.34 KB, patch)
2010-10-04 11:42 PDT, Harry Wu
darin: review+
steveblock: commit-queue-
Harry Wu
Comment 1 2010-10-04 11:42:24 PDT
Created attachment 69653 [details] Fix a compiler error for ANDROID
Steve Block
Comment 2 2010-10-04 14:01:32 PDT
Comment on attachment 69653 [details] Fix a compiler error for ANDROID Commit queue is backed up, will land manually.
Steve Block
Comment 3 2010-10-04 14:07:01 PDT
Note You need to log in before you can comment on or make changes to this bug.