2010-10-04  Huahui Wu  <mediadependent@gmail.com>

Reviewed by Darin Adler.

        Fix a compiler error for ANDROID introduced by bug 45221.
        https://bugs.webkit.org/show_bug.cgi?id=47095

        It's a small fix for a compiler error, so there is no new test.

        * platform/android/PlatformTouchEventAndroid.cpp:
        (WebCore::PlatformTouchEvent::PlatformTouchEvent):


Canonical link: https://commits.webkit.org/59641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69034 268f45cc-cd09-0410-ab3c-d52691b4dbfc